syntax = "proto3";

option csharp_namespace = "GrpcServer";

import "google/protobuf/timestamp.proto";
package notification;
service Notify {
  rpc SendNotification(NotificationMessage) returns (NotificationResponse);
  rpc GetAllNotifications(GetAllNotificationsMessage) returns  (stream NotificationMessage);
}

message NotificationMessage{
  string title = 1;
  string text = 2;
  string senderName=3;
  string chatId = 4;
}

message NotificationResponse{
  bool isSuccess= 1;
}

message GetAllNotificationsMessage {
	string title = 1;
	repeated string text = 2;
	string senderName=3;
	string chatId = 4;
}